ingress rules/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - host: www.nikita-tyutikov.ru
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: main
              port:
                number: 80
  
  - host: web1.nikita-tyutikov.ru
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web1
              port:
                number: 80 

  - host: web2.nikita-tyutikov.ru
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web2
              port:
                number: 80       
  - host: cat.nikita-tyutikov.ru
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tomcat
              port:
                number: 8080
