ingress rules/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - host: www.nikita-tyutikov.ru
    http:
      paths:
        - path: /page1
          pathType: Prefix
          backend:
            service:
              name: webx
              port: 
                number: 80

        - path: /page2
          pathType: Prefix
          backend:
            service:
              name: main
              port: 
                number: 80

        - path: /page3
          pathType: Prefix
          backend:
            service:
              name: tomcat
              port: 
                number: 8080
